# oxidizemc

./: Cargo.toml  oxidizemc.code-workspace
derive/: Cargo.toml
derive/src/: lib.rs
src/: build.rs  jvm.rs  lib.rs
